ELVIS-OBEN-IS27-devops-specialist-competition-req99120/k8s-objects/service.yaml
kind: Service
apiVersion: v1
metadata:
  name:  api-server
spec:
  selector:
    name:  api-server
  type:   NodePort
  ports:
  - name:  http-web
    port:  80
    targetPort:  3000
