ELVIS-OBEN-IS27-devops-specialist-competition-req99120/k8s-objects/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-server
  labels:
    name: api-server
spec:
  ingressClassName: nginx
  rules:
  - host: "localhost"
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: api-server
            port: 
              number: 80
